--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Npm Publish
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   publish:
@@ -34,10 +34,9 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Gen npmrc
-        run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
-
-      - name: Build
-        run: pnpm run build
+        run: |
+          echo "registry=https://registry.npmjs.com/" >> ./.npmrc
+          echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
 
       - name: Release
         run: pnpm run release
