--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,9 +34,7 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Gen npmrc
-        run: |
-          echo "registry=https://registry.npmjs.com/" >> ./.npmrc
-          echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
+        run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
 
       - name: Release
         run: pnpm run release
