--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "secai"
   ],
   "scripts": {
-    "dev": "esno src/cli.ts",
-    "build": "esno scripts/build.ts && tsup src/cli.ts src/index.ts --format cjs,esm --dts --minify",
+    "dev": "tsx src/cli.ts",
+    "build": "tsx scripts/build.ts && tsup src/cli.ts src/index.ts --format cjs,esm --dts --minify",
     "prepare": "pnpm run build",
     "release": "pnpm publish --no-git-checks"
   },
   "dependencies": {
-    "chalk": "^4.1.2"
+    "chalk": "^5.0.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.8",
+    "@jungzl/eslint-config-ts": "^0.0.1",
     "@types/chroma-js": "^2.1.3",
     "@types/color-namer": "^1.3.0",
-    "@types/node": "^17.0.21",
+    "@types/node": "^18.0.0",
     "chroma-js": "^2.4.2",
     "color-namer": "^1.4.0",
-    "eslint": "^8.11.0",
-    "esno": "^0.14.1",
-    "tsup": "^5.12.1",
-    "typescript": "^4.6.2"
+    "eslint": "^8.18.0",
+    "tsup": "^6.1.2",
+    "tsx": "^3.4.3",
+    "typescript": "^4.7.4"
   }
 }
