--- a/package.json
+++ b/package.json
@@ -33,23 +33,24 @@
   ],
   "scripts": {
     "dev": "tsx src/cli.ts",
-    "build": "tsx scripts/build.ts && tsup src/cli.ts src/index.ts --format cjs,esm --dts --minify",
+    "build": "tsx scripts/build.ts && tsdown src/cli.ts src/index.ts --format cjs,esm --dts --minify",
     "prepare": "pnpm run build",
     "release": "pnpm publish --no-git-checks"
   },
   "dependencies": {
-    "chalk": "^5.0.1"
+    "chalk": "^5.4.1"
   },
   "devDependencies": {
     "@jungzl/eslint-config-ts": "^0.0.8",
-    "@types/chroma-js": "^2.1.3",
-    "@types/color-namer": "^1.3.0",
-    "@types/node": "^18.0.0",
-    "chroma-js": "^2.4.2",
+    "@types/chroma-js": "^3.1.1",
+    "@types/color-namer": "^1.3.3",
+    "@types/node": "^22.15.34",
+    "chroma-js": "^3.1.2",
     "color-namer": "^1.4.0",
-    "eslint": "^8.18.0",
-    "tsup": "^7.0.0",
-    "tsx": "^3.4.3",
-    "typescript": "^5.0.0"
-  }
+    "eslint": "^8.57.1",
+    "tsdown": "^0.12.9",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
+  },
+  "packageManager": "pnpm@10.12.4"
 }
